--- a/src/components/SongList/SongList.css
+++ b/src/components/SongList/SongList.css
@@ -6,7 +6,7 @@
 }
 
 .main-pause-play-btn {
-  background: #1db954;
+  background: #f10f0f;
   font-family: 'Proxima Nova', Georgia, sans-serif;
   color: #fff;
   border: none;
@@ -33,7 +33,7 @@
 }
 
 .active.user-song-item {
-  color: #1db954;
+  color:#f10f0f ;
   background: rgb(51, 51, 51);
 }
 
